--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://www.wowprogress.com/character/eu/stormscale/Timeslayer"],
+      "matches": ["https://www.wowprogress.com/character/*"],
       "js": ["background.js"]
     }
   ],
