--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
 
   "permissions": [
-    "activeTab"
+    ""
   ],
   "content_scripts": [
     {
@@ -15,6 +15,9 @@
   "browser_action": {
     "default_title": "Wlogs-link-extension"
   },
+  "icons": { "16": "icon16.png",
+    "48": "icon48.png",
+   "128": "icon128.png" },
 
   "manifest_version": 3
 }
